Pontoon: Update Armenian (hy-AM) localization of Firefox Co-authored-by: anush.amirbekyan <anush.amirbekyan@realschool.am> Co-authored-by: suren.minasyan <suren.minasyan@realschool.am> Co-authored-by: arshakabrahamyan03 <arshakabrahamyan03@mail.ru> Co-authored-by: Hrant Ohnayan <hrant.mozilla@gmail.com>

--- a/hy-AM/browser/chrome/browser/sitePermissions.properties
+++ b/hy-AM/browser/chrome/browser/sitePermissions.properties
@@ -42,7 +42,7 @@ permission.camera.label = Օգտագործել տեսախցիկը
 permission.microphone.label = Օգտագործել խոսափողը
 permission.screen.label = Համօգտագործել էկրանը
 permission.install.label = Տեղադրել հավելումներ
-permission.popup.label = Բացել Pop-up Պատուհանները
+permission.popup.label = Բացել ելնող պատուհանները
 permission.geo.label = Մուտք գործել Ձեր գտնվելու վայրը
 permission.xr.label = Մատչում թվացյալ իրականության սարքեր
 permission.shortcuts.label = Վերագրել ստեղնաշարի դյուրանցումները
