--- a/hy-AM/browser/chrome/browser/syncSetup.properties
+++ b/hy-AM/browser/chrome/browser/syncSetup.properties
@@ -11,4 +11,4 @@ continue.label = Շարունակել
 relinkVerify.title = Միացնել զգուշացումը
 relinkVerify.heading = Մուտք գործե՞լ համաժամեցում։
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
-relinkVerify.description = Մեկ այլ օգտատեր այս համակարգչից արդեն մուտք է գործել Սինք: Մուտք գործելուց հետո դիտարկիչի էջանիշերը, գաղտնաբառերը և այլ տվյալներ կրկին կհամաժամեցվեն %S-ի հետ
+relinkVerify.description = Մեկ այլ օգտատեր այս համակարգչից արդեն մուտք է գործել համաժամեցում։ Մուտք գործելուց հետո դիտարկչի էջանիշերը, գաղտնաբառերը և այլ տվյալներ կրկին կհամաժամեցվեն %S-ի հետ
