--- a/hy-AM/browser/chrome/overrides/appstrings.properties
+++ b/hy-AM/browser/chrome/overrides/appstrings.properties
@@ -2,30 +2,30 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-malformedURI2=Ստուգեք, որ URL-ն ճիշտ է և կրին փորձեք:
-fileNotFound=Firefox-ը չկարողացավ գտնել ֆայլը այստեղ` %S:
-fileAccessDenied=%S ֆայլն անհնար է կարդալ:
-dnsNotFound2=Մենք չենք կարող կապակցվել սպասարկիչին %S-ով:
-unknownProtocolFound=Firefox-ը չգիտի, թե ինչպես բացել այս հասցեն, քանի որ հաղորդակարգերից մեկը (%S) ասոցիացված չէ որևէ ծրագրի հետ կամ թույլատրված չէ այս բովանդակությամբ:
-connectionFailure=Firefox-ը չկարողացավ կապ հաստատել %S հասցեով սպասարկիչի հետ:
-netInterrupt=Էջը բեռնելու ընթացքում %S -ի հետ կապը ընթատվեց:
-netTimeout=%S հասցեում սերվերը շատ ուշ է պատասխանում:
-redirectLoop=Firefox-ը հայտնաբերեց, որ սպասարկիչի այս հասցեի ձեր հարցումը ուղղորդում է այնպիսի փակուղղային ուղղությամբ, որը երբեք չի ավարտվի:
+malformedURI2=Ստուգեք, որ URL-ը ճիշտ է և կրկին փորձեք։
+fileNotFound=Firefox-ը չկարողացավ գտնել նիշքը այստեղ` %S։
+fileAccessDenied=%S նիշքն անհնար է կարդալ։
+dnsNotFound2=Մենք չենք կարող կապակցվել սպասարկչին %S-ով։
+unknownProtocolFound=Firefox-ը չգիտի, թե ինչպես բացել այս հասցեն, քանի որ հաղորդակարգերից մեկը (%S) համակցված չէ որևէ ծրագրի հետ կամ թույլատրված չէ այս բովանդակությամբ։
+connectionFailure=Firefox-ը չկարողացավ կապ հաստատել %S հասցեով սպասարկչի հետ։
+netInterrupt=Էջը բեռնելու ընթացքում %S-ի հետ կապը ընթատվեց։
+netTimeout=%S հասցեում սպասարկիչը շատ ուշ է պատասխանում։
+redirectLoop=Firefox-ը հայտնաբերեց, որ սպասարկչի այս հասցեի Ձեր հարցումը ուղղորդում է այնպիսի փակուղղային ուղղությամբ, որը երբեք չի ավարտվի։
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don’t translate "%S"
 confirmRepostPrompt=Այս էջը ցուցադրելու համար, %S-ը պետք է ուղարկի տվյալներ, որը կարող է կրկնել նախկինում կատարված որևէ գործողություն (օրինակ որոնում կամ ցանցային առևտուր):։
 resendButton.label=Կրկին ուղարկել
 unknownSocketType=Firefox-ը չգիտի, թե ինչպես հաղորդակցվել սպասարկչի հետ:
-netReset=Սպասարկիչի հետ կապը խզվեց էջի բեռնման ժամանակ:
+netReset=Սպասարկչի հետ կապը խզվեց էջի բեռնման ժամանակ։
 notCached=Փաստաթուղթը այլևս հասանելի չէ։
-netOffline=Firefox-ը այժմ գտնվում է անցանց եղանակում և չի կարող նավարկել ցանցում:
+netOffline=Firefox-ը այժմ գտնվում է անցանց եղանակում և չի կարող զննարկել ցանցում։
 isprinting=Փաստաթղթը տպելու կամ նախադիտելու ժամանակ չի կարող փոփոխվել:
-deniedPortAccess=Այս հասցեն օգտագործում է ցանցային պորտ, որը սովորաբար նախատեսված է չէ նավարկման համար: Firefox-ը չեղարկեց հարցումը՝ ձեր պաշտպանության նկատառումից ելնելով:
-proxyResolveFailure=Firefox-ը կարգավորված է պրոքսի սպասարկիչ օգտագործելու համար, սակայն սպասարկիչը չի գտնվում:
-proxyConnectFailure=Firefox-ը կարգավորված է պրոքսի սպասարկիչ օգտագործելու համար, սակայն այն մերժում է կապը:
-contentEncodingError=Էջը որը դուք փորձում եք դիտել չի կարող ցուցադրվել, քանի որ այն օգտագործում է խտացման սխալ կամ չսպասարկվող ձև:
-unsafeContentType=Էջը, որը դուք փորձում էք դիտել, չի կարող ցուցադրվել քանի որ այն պարունակում է ֆայլի այնպիտի տեսակ որի բացումը կարող է վտանգավոր լինել: Տեղեկացրեք այս պռոբլեմի մասին կայքի ադմինիստրատորների:
-externalProtocolTitle=Հարցվել է արտաքին աշխատակարգ
-externalProtocolPrompt=Պետք է մեկնարկվի արտաքին ծրագիր որը կմշակի %1$S հղումները:\n\n\nՀարցված հղում:\n\n%2$S\n\nԾրագիր: %3$S\n\n\nԵթե դուք չեիք սպասում այս հարցմանը ապա այն կարող է լինել այդ ծրագրում թերության շահագործման փորձ: Չեղարկեք այս հայցը, եթե վստահ չեք որ այն անվնաս է:\n
+deniedPortAccess=Այս հասցեն օգտագործում է ցանցային պորտ, որը սովորաբար նախատեսված է զննարկման համար։ Firefox-ը չեղարկեց հարցումը՝ Ձեր պաշտպանության նկատառումից ելնելով։
+proxyResolveFailure=Firefox-ը կազմաձևված է մոտակա, չգտնվող սպասարկիչը օգտագործելու համար։
+proxyConnectFailure=Firefox-ը կազմաձևված է մոտակա, կապակցումները մերժող սպասարկիչը օգտագործելու համար։
+contentEncodingError=Էջը որը Դուք փորձում եք դիտել չի կարող ցուցադրվել, քանի որ այն օգտագործում է խտացման սխալ կամ չսպասարկվող ձև։
+unsafeContentType=Էջը, որը Դուք փորձում եք դիտել, չի կարող ցուցադրվել քանի որ այն պարունակում է նիշքի այնպիտի տեսակ որի բացումը կարող է վտանգավոր լինել։ Տեղեկացրեք այս խնդրի մասին կայքի տերերին։
+externalProtocolTitle=Պահանջվել է արտաքին աշխատակարգ
+externalProtocolPrompt=Պետք է մեկնարկվի արտաքին ծրագիր որը կմշակի %1$S հղումները։\n\n\\nՊահանջված հղում։\n\n%2$S\n\nԾրագիր։ %3$S\n\n\nԵթե Դուք չէիք սպասում այս հարցմանը ապա այն կարող է լինել այդ ծրագրում թերության շահագործման փորձ։ Չեղարկեք այս հայցը, եթե վստահ չեք որ այն անվնաս է։\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Անհայտ>
 externalProtocolChkMsg=Հիշեք իմ ընտրությունը բոլոր այս տեսակի հղումների համար։
