--- a/hy-AM/browser/installer/nsisstrings.properties
+++ b/hy-AM/browser/installer/nsisstrings.properties
@@ -19,7 +19,7 @@
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
 
-INSTALLER_WIN_CAPTION=$BrandShortName-ի տեղադրում
+INSTALLER_WIN_CAPTION=$BrandShortName Տեղադրիչ
 
 STUB_CLEANUP_PAVEOVER_HEADER2=$BrandShortName-ը արդեն տեղադրված է։ Եկեք թարմացնենք այն։
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName-ը նախկինում տեղադրվել է։ Եկեք ստացեք նոր պատճեն։
@@ -27,7 +27,8 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Թարմացնել
 STUB_CLEANUP_REINSTALL_BUTTON=Կրկին &տեղադրել
 STUB_CLEANUP_CHECKBOX_LABEL=&Վերականգնել լռելյայն կարգավորումները և հեռացնել հին հավելումները՝ լրացուցիչ արտադրողականության համար
 
-STUB_INSTALLING_LABEL2=Այժմ տեղադրվում է...
+
+STUB_INSTALLING_LABEL2=Տեղադրվում է...
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
@@ -43,7 +44,7 @@ WARN_MIN_SUPPORTED_CPU_MSG=Կներեք, բայց $BrandShortName-ը չի կար
 WARN_MIN_SUPPORTED_OSVER_CPU_MSG=Կներեք, բայց $BrandShortName-ը չի կարող տեղադրվել: $BrandShortName-ի ընթացիկ տարբերակը պահանջում է ${MinSupportedVer} կամ ավելի նորը և ${MinSupportedCPU}-ի աջակցում: Սեղմեք Լավ՝ մանրամասները դիտելու համար:
 WARN_WRITE_ACCESS_QUIT=Դուք չեք կարող գրել տեղադրման գրացուցակում
 WARN_DISK_SPACE_QUIT=Հիշասարքում չկա բավարար ազատ տեղ:
-WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName-ը արդեն աշխատում է։\n\nՓակեք $BrandShortName-ը՝ նոր տարբերակը աշխատացնելու համար։։
+WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName-ը արդեն աշխատում է։\n\nՓակեք $BrandShortName-ը՝ նոր տարբերակը թողարկելու համար։։
 
 ERROR_DOWNLOAD_CONT=Ինչ-որ պատճառով հնարավոր չեղավ տեղադրել $BrandShortName-ը:\nՍեղմեք Լավ՝ կրկին փորձելու համար:
 
