--- a/hy-AM/browser/chrome/browser/taskbar.properties
+++ b/hy-AM/browser/chrome/browser/taskbar.properties
@@ -5,8 +5,8 @@
 taskbar.tasks.newTab.label=Բացել նոր ներդիր
 taskbar.tasks.newTab.description=Բացեք զննարկչի նոր ներդիր:
 taskbar.tasks.newWindow.label=Բացել նոր պատուհան
-taskbar.tasks.newWindow.description=Բացել դիտարկիչի նոր պատուհան։
+taskbar.tasks.newWindow.description=Բացել զնարկչի նոր պատուհան։
 taskbar.tasks.newPrivateWindow.label=Նոր գաղտնի պատուհան
-taskbar.tasks.newPrivateWindow.description=Բացել նոր՝ Գաղտնի Դիտարկման պատուհան:
+taskbar.tasks.newPrivateWindow.description=Բացել նոր Գաղտնի Դիտարկման պատուհան:
 taskbar.frequent.label=Հաճախակի
 taskbar.recent.label=Վերջին
