--- a/hy-AM/browser/installer/mui.properties
+++ b/hy-AM/browser/installer/mui.properties
@@ -29,24 +29,24 @@ MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Նկարագրությունը
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Բաղադրիչի մասին տեղեկություն ստանալու համար մկնիկի սլաքը մոտեցնեք նրան:
 MUI_TEXT_DIRECTORY_TITLE=Ընտրեք տեղակայման տեղը
 MUI_TEXT_DIRECTORY_SUBTITLE=Ընտրեք $BrandFullNameDA-ը տեղադրելու թղթապանակը:
-MUI_TEXT_INSTALLING_TITLE=Տեղակայվում է...
+MUI_TEXT_INSTALLING_TITLE=Տեղադրվում է
 MUI_TEXT_INSTALLING_SUBTITLE=Սպասեք, մինչ $BrandFullNameDA-ը կտեղակայվի:
 MUI_TEXT_FINISH_TITLE=Տեղակայումը ավարտված է
 MUI_TEXT_FINISH_SUBTITLE=Տեղակայումը հաջողությամբ ավարտվեց:
 MUI_TEXT_ABORT_TITLE=Տեղակայումը ընդհատվել է
 MUI_TEXT_ABORT_SUBTITLE=Տեղակայումը չավարտվեց:
-MUI_BUTTONTEXT_FINISH=&Պատրաստ է
+MUI_BUTTONTEXT_FINISH=&Ավարտել
 MUI_TEXT_FINISH_INFO_TITLE=$BrandFullNameDA-ը տեղադրելու օգնականը վերջացնում է աշխատանքը
 MUI_TEXT_FINISH_INFO_TEXT=$BrandFullNameDA-ի տեղակայումը ավարտվեց:\n\nԾրագրից դուրս գալու համար սեղմեք Պատրաստ է:
 MUI_TEXT_FINISH_INFO_REBOOT=$BrandFullNameDA-ը տեղադրումը ավարտելու համար պետք է վերամեկնարկեք համակարգիչը: Վերամեկնարկել՞լ հիմա:
 MUI_TEXT_FINISH_REBOOTNOW=Վերագործարկել
-MUI_TEXT_FINISH_REBOOTLATER=Ոչ, ես ինքս կվերագործարկեմ
+MUI_TEXT_FINISH_REBOOTLATER=Ոչ, ես ավելի ուշ կվերագործարկեմ
 MUI_TEXT_STARTMENU_TITLE=Ընտրեք Start ընտրացանկի թղթապանակը
-MUI_TEXT_STARTMENU_SUBTITLE=Ընտրեք Start ընտրացանկի թղթապանակը՝ $BrandFullNameDA-ի պիտակների համար:
-MUI_INNERTEXT_STARTMENU_TOP=Ընտրեք Start ընտրացանկի թղթապանակը, որտեղ դուք կցանականք ստեղծել ծրագրերի պիտակները: Դուք նաև կարող էք մուտքագրելուվ անունը՝ ստեղծելու նոր թղթապանակ :
+MUI_TEXT_STARTMENU_SUBTITLE=Ընտրեք Start ցանկի թղթապանակը՝ $BrandFullNameDA-ի դյուրանցումների համար:
+MUI_INNERTEXT_STARTMENU_TOP=Ընտրեք Start ցանկի թղթապանակը, որտեղ դուք կցանականք ստեղծել ծրագրերի պիտակները: Դուք նաև կարող եք մուտքագրել անունը՝ ստեղծելու նոր թղթապանակ :
 MUI_TEXT_ABORTWARNING=Դուք համոզվա՞ծ եք, որ ցանկանում եք դուրս գալ $BrandFullName-ի տեղակայումից:
 MUI_UNTEXT_WELCOME_INFO_TITLE=$BrandFullNameDA-ի հեռացման ծրագիրը ողջունում է ձեզ
-MUI_UNTEXT_WELCOME_INFO_TEXT=Այս ծրագիրը ձեզ կուղեկցի $BrandFullNameDA-ը հեռացնելու ընթացքում: \n\nՄինչև ջնջելը սկսելը համոզվեք, որ $BrandFullNameDA-ը չի աշխատում այս պահին:\n\n$_CLICK
+MUI_UNTEXT_WELCOME_INFO_TEXT=Այս ծրագիրը ձեզ կուղեկցի $BrandFullNameDA-ը հեռացնելու ընթացքում: \n\nՄինչև ապատեղադրելը սկսելը համոզվեք, որ $BrandFullNameDA-ը չի աշխատում այս պահին:\n\n$_CLICK
 MUI_UNTEXT_CONFIRM_TITLE=$BrandFullNameDA-ի հեռացում
 MUI_UNTEXT_CONFIRM_SUBTITLE=Ջնջում է $BrandFullNameDA-ը ձեր համակարգչից:
 MUI_UNTEXT_UNINSTALLING_TITLE=Ջնջում
