Pontoon: Update Armenian (hy-AM) localization of Firefox Co-authored-by: suren.minasyan <suren.minasyan@realschool.am> Co-authored-by: vahram.chalabyan <vahram.chalabyan@realschool.am> Co-authored-by: Hrant Ohnayan <hrant.mozilla@gmail.com>

--- a/hy-AM/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hy-AM/security/manager/chrome/pipnss/nsserrors.properties
@@ -264,7 +264,7 @@ SEC_ERROR_OCSP_TRY_SERVER_LATER=OCSP-սերվերը առաջարկում է փո
 SEC_ERROR_OCSP_REQUEST_NEEDS_SIG=Այս հարցման համար OCSP-սերվերը պահանջում է ստորագրություն:
 SEC_ERROR_OCSP_UNAUTHORIZED_REQUEST=OCSP-սերվերը մերժեց այս հարցում, որպես չնույնականացված:
 SEC_ERROR_OCSP_UNKNOWN_RESPONSE_STATUS=OCSP-սերվերը վերադարձրեց անծանոթ կարգավիճակ:
-SEC_ERROR_OCSP_UNKNOWN_CERT=Այս սերտիֆիկատի համառ OCSP-սերվերը չունի կարգավիճակ:
+SEC_ERROR_OCSP_UNKNOWN_CERT=Այս վկայագրի համար OCSP-սպասարկիչը չունի կարգավիճակ:
 SEC_ERROR_OCSP_NOT_ENABLED=Այս գործողությունը կատարելուց առաջ դուք պետք է միացնեք OCSP -ն:
 SEC_ERROR_OCSP_NO_DEFAULT_RESPONDER=Դուք պետք է կանխավ կարգավորեք OCSP պատասխանիչը մինչև այս գործեղությունը կատարելը:
 SEC_ERROR_OCSP_MALFORMED_RESPONSE=OCSP-սերվերի պատասխանը վնասված էր կամ ուներ սխել ձևաչափ:
