--- a/hy-AM/dom/chrome/layout/printing.properties
+++ b/hy-AM/dom/chrome/layout/printing.properties
@@ -54,7 +54,7 @@ PERR_GFX_PRINTER_NO_PRINTER_AVAILABLE=Որևէ տպիչ առկա չէ։
 PERR_GFX_PRINTER_NO_PRINTER_AVAILABLE_PP=Տպիչներ չկան, հնարավոր չէ նախադիտել։
 PERR_GFX_PRINTER_NAME_NOT_FOUND=Ընտրված տպիչը չի գտնվել։
 PERR_GFX_PRINTER_COULD_NOT_OPEN_FILE=Հնարավոր չեղավ բացել արտածվող ֆայլը՝ այն տպելու համար։
-PERR_GFX_PRINTER_STARTDOC=Տպելը ձախողվեց՝ դեռ չսկսված:
+PERR_GFX_PRINTER_STARTDOC=Տպելը ձախողվեց՝ դեռ չսկսված։
 PERR_GFX_PRINTER_ENDDOC=Տպելը ձախողվեց տպելու ընթացքում։
 PERR_GFX_PRINTER_STARTPAGE=Տպելը ձախողվեց՝ նոր էջ բացելիս։
 PERR_GFX_PRINTER_DOC_IS_BUSY=Այս փաստաթուղթը դեռ հնարավոր չէ տպել, քանի որ այն դեռ բեռնվում է։
