New strings for Firefox, dom, and toolkit

--- a/da/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/da/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -2,10 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# LOCALIZATION NOTE: Do not translate <html:br/>
+# LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
+# Application not responding
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Genstart %S
 restartMessageNoUnlocker=%S kører allerede, men svarer ikke. For at åbne et nyt vindue, skal du først afslutte den eksisterende %S proces, eller genstarte dit system.
+restartMessageNoUnlocker2=%S kører allerede, men svarer ikke. For at bruge %S, skal du først afslutte eksisterende %S-processer, genstarte din enhed eller bruge en anden profil.
 restartMessageUnlocker=%S kører allerede, men svarer ikke. Den gamle %S proces skal afsluttes for at åbne et nyt vindue.
 restartMessageNoUnlockerMac=En kopi af %S er allerede åben. Kun en kopi af %S kan være åben ad gangen.
 restartMessageUnlockerMac=En kopi af %S er allerede åben. Den kørende kopi af %S vil blive afsluttet for at åbne denne i stedet.
