--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -1229,3 +1229,7 @@ confirmationHint.breakageReport.label = Rapporten er sendt. Tak!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Live-bogmærker fra %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Søg efter %S på nettet
