--- a/da/browser/installer/nsisstrings.properties
+++ b/da/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Opdater
 STUB_CLEANUP_REINSTALL_BUTTON=Gen-&installer
 STUB_CLEANUP_CHECKBOX_LABEL=&Gendan standard-indstillingerne og fjern gamle tilføjelser for at få den bedste ydelse
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Opdater
+STUB_CLEANUP_REINSTALL_BUTTON2=Gen-installer
+STUB_CLEANUP_CHECKBOX_LABEL2=Gendan standard-indstillinger og fjerne gamle tilføjelser for at få den bedste ydelse
+
 STUB_INSTALLING_LABEL2=Installerer…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Beskyt dit privatliv.\nBrug $BrandProductName.
 STUB_INSTALLING_BODY=Få resten af vores produkter, der er målrettet til at beskytte dit privatliv  - og lær, hvordan du bliver mere sikker på nettet.
+STUB_INSTALLING_HEADLINE2=Optimerer dine indstillinger for at få den bedste ydelse, sikkerhed og privatlivs-beskyttelse
+STUB_INSTALLING_BODY2=$BrandShortName er klar lige om lidt.
 STUB_BLURB_FIRST1=Den hurtigste $BrandShortName nogensinde
 STUB_BLURB_SECOND1=Indlæsning af sider og skift mellem faneblade går nu endnu hurtigere
 STUB_BLURB_THIRD1=Sikker privat browsing
