--- a/it/toolkit/chrome/global/aboutReader.properties
+++ b/it/toolkit/chrome/global/aboutReader.properties
@@ -15,6 +15,8 @@ aboutReader.fontType.sans-serif = Senza grazie
 aboutReader.fontTypeSample = Aa
 aboutReader.toolbar.close = Chiudi Modalità lettura
 aboutReader.toolbar.typeControls = Controlli carattere
+readerView.savetopocket.label = Salva in Pocket
+readerView.done.label = Fatto
 readerView.enter = Attiva Modalità lettura
 readerView.enter.accesskey = A
 readerView.close = Chiudi Modalità lettura
