Pontoon: Update Armenian (hy-AM) localization of Firefox Co-authored-by: suren.minasyan <suren.minasyan@realschool.am> Co-authored-by: Hrant Ohnayan <hrant.mozilla@gmail.com>

--- a/hy-AM/browser/extensions/formautofill/formautofill.properties
+++ b/hy-AM/browser/extensions/formautofill/formautofill.properties
@@ -126,7 +126,7 @@ neighborhood = Հարևանություն
 village_township = Գյուղ կամ համայնք
 island = Կղզի
 # LOCALIZATION NOTE (townland): Used in IE
-townland = Լեհաստան
+townland = Townland
 
 ## address-level-2 names
 city = Քաղաք
@@ -200,8 +200,8 @@ cardNetwork.visa = Վիզա
 
 # LOCALIZATION NOTE (editCreditCardPasswordPrompt.*, useCreditCardPasswordPrompt.*): %S is brandShortName.
 editCreditCardPasswordPrompt.win = %S-ը փորձում է ցուցադրել վարկային քարտի տեղեկություն։ Հաստատեք ստորև այս պատուհանների էջի մատչումը։
-editCreditCardPasswordPrompt.macosx = %S-ը փորձում է ցցուցադրել վարկային քարտի տեղեկությունը։
-editCreditCardPasswordPrompt.linux = %S-ը փորձում է ցցուցադրել վարկային քարտի տեղեկությունը։
+editCreditCardPasswordPrompt.macosx = %S-ը փորձում է ցցուցադրել բանկային քարտի տեղեկությունը։
+editCreditCardPasswordPrompt.linux = %S-ը փորձում է ցցուցադրել բանկային քարտի տեղեկությունը։
 useCreditCardPasswordPrompt.win = %S-ը փորձում է օգտագործել պահված վարկային քարտերի տեղեկությունը։ Ստորև հաստատե՛ք պատուհանների էջի մատչումը։
 useCreditCardPasswordPrompt.macosx = %S-ը փորձում է օգտագործել պահված վարկային քարտի տեղեկությունը։
 useCreditCardPasswordPrompt.linux = %S-ը փորձում է օգտագործել պահված վարկային քարտի տեղեկությունը։
