--- a/da/browser/installer/nsisstrings.properties
+++ b/da/browser/installer/nsisstrings.properties
@@ -29,7 +29,7 @@ STUB_CLEANUP_CHECKBOX_LABEL=&Gendan standard-indstillingerne og fjern gamle tilf
 
 STUB_CLEANUP_PAVEOVER_BUTTON2=Opdater
 STUB_CLEANUP_REINSTALL_BUTTON2=Gen-installer
-STUB_CLEANUP_CHECKBOX_LABEL2=Gendan standard-indstillinger og fjerne gamle tilføjelser for at få den bedste ydelse
+STUB_CLEANUP_CHECKBOX_LABEL2=Gendan standard-indstillinger og fjern gamle tilføjelser for at få den bedste ydelse
 
 STUB_INSTALLING_LABEL2=Installerer…
 # The \n in the next string is intended to force a nice-looking layout in en-US
