Pontoon: Update Armenian (hy-AM) localization of Firefox Co-authored-by: anush.amirbekyan <anush.amirbekyan@realschool.am> Co-authored-by: suren.minasyan <suren.minasyan@realschool.am> Co-authored-by: Hrant Ohnayan <hrant.mozilla@gmail.com>

--- a/hy-AM/toolkit/chrome/global/aboutWebrtc.properties
+++ b/hy-AM/toolkit/chrome/global/aboutWebrtc.properties
@@ -129,6 +129,7 @@ dropped_frames_label = Գցված շրջանակներ
 discarded_packets_label = Անտեսված փաթեթներ
 decoder_label = Ապայլագրիչ
 encoder_label = Այլագրիչ
+received_label = Ստացված
 packets = փաթեթներ
 lost_label = Կորցրած
 jitter_label = Jitter
