--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1047,6 +1047,11 @@ netmonitor.toolbar.timings=זמנים
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=כותרות תגובה
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=חסימה
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=כתובת בקשה:
@@ -1096,6 +1101,11 @@ netmonitor.summary.rawHeaders.responseHeaders=כותרי תגובה:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=גודל כותרים:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=גולמי
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
