--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1105,7 +1105,7 @@ netmonitor.summary.size=גודל כותרים:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
-netmonitor.headers.raw=גולמי
+netmonitor.headers.raw=נתונים גולמיים
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
