Pontoon: Update Vietnamese (vi) localization of Firefox Co-authored-by: Quế Tùng <best.cloney.1301@gmail.com>

--- a/vi/browser/chrome/browser/preferences/preferences.properties
+++ b/vi/browser/chrome/browser/preferences/preferences.properties
@@ -4,7 +4,7 @@
 
 #### Master Password
 
-pw_change2empty_in_fips_mode=Bạn đang ở chế độ FIPS. FIPS yêu cầu Mật khẩu Chính không được để trống.
+pw_change2empty_in_fips_mode=Bạn đang ở chế độ FIPS. FIPS yêu cầu mật khẩu chính không được để trống.
 pw_change_failed_title=Thay đổi mật khẩu không thành công
 
 #### Applications
