--- a/vi/dom/chrome/security/security.properties
+++ b/vi/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Các trường mật khẩu hiện trên iframe
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Đang tải nội dung hoạt động hỗn hợp (không an toàn) “%1$S” trên một trang an toàn
 LoadingMixedDisplayContent2=Đang tải nội dung hiển thị hỗn hợp (không an toàn) “%1$S” trên một trang an toàn
+LoadingMixedDisplayObjectSubrequestDeprecation=Tải nội dung hỗn hợp (không an toàn) “%1$S” trong một bổ trợ trên trang bảo mật không được khuyến khích và sẽ bị chặn trong tương lai.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Một iframe có cả allow-scripts và allow-same-origin cho thuộc tính sandbox của nó có thể loại bỏ hộp cát của nó.
 
