--- a/vi/security/manager/chrome/pipnss/pipnss.properties
+++ b/vi/security/manager/chrome/pipnss/pipnss.properties
@@ -5,7 +5,7 @@
 
 CertPassPrompt=Hãy nhập mật khẩu chính cho %S.
 
-CertPassPromptDefault=Vui lòng gõ mật khẩu chính của bạn.
+CertPassPromptDefault=Vui lòng nhập mật khẩu chính của bạn.
 
 # The following strings have special requirements: they must fit in a 32 or 64
 # bytes buffer after being encoded to UTF-8.
