--- a/vi/security/manager/chrome/pippki/pippki.properties
+++ b/vi/security/manager/chrome/pippki/pippki.properties
@@ -73,28 +73,14 @@ pageInfo_CertificateTransparency_Compliant=Trang web này tuân thủ chính sá
 # Token Manager
 password_not_set=(chưa đặt)
 failed_pw_change=Không thể thay đổi mật khẩu chính.
-incorrect_pw=Bạn không nhập đúng Mật khẩu chính hiện tại. Hãy thử lại.
+incorrect_pw=Bạn không nhập đúng mật khẩu chính hiện tại. Hãy thử lại.
 pw_change_ok=Đã thay đổi mật khẩu chính thành công.
-pw_erased_ok=Cảnh báo! Bạn đã xóa Mật khẩu chính của bạn. 
-pw_not_wanted=Cảnh báo! Bạn vừa quyết định không dùng Mật khẩu chính.
+pw_erased_ok=Cảnh báo! Bạn đã xóa mật khẩu chính của bạn.
+pw_not_wanted=Cảnh báo! Bạn vừa quyết định không dùng mật khẩu chính.
 pw_empty_warning=Các mật khẩu web và email, dữ liệu biểu mẫu, và các khóa cá nhân của bạn sẽ không được bảo vệ.
-pw_change2empty_in_fips_mode=Bạn đang ở chế độ FIPS. FIPS yêu cầu Mật khẩu chính không được để trống.
+pw_change2empty_in_fips_mode=Bạn đang ở chế độ FIPS. FIPS yêu cầu mật khẩu chính không được để trống.
 enable_fips=Bật FIPS
 disable_fips=Tắt FIPS
 
-resetPasswordConfirmationTitle=Đặt lại Mật khẩu chính
+resetPasswordConfirmationTitle=Đặt lại mật khẩu chính
 resetPasswordConfirmationMessage=Mật khẩu của bạn đã được đặt lại.
-
-# Cert export
-SaveCertAs=Lưu chứng chỉ vào tập tin
-CertFormatBase64=X.509 Chứng chỉ (PEM)
-CertFormatBase64Chain=X.509 Chứng chỉ có mạch chuỗi (PEM)
-CertFormatDER=X.509 Chứng chỉ (DER)
-CertFormatPKCS7=X.509 Chứng chỉ (PKCS#7)
-CertFormatPKCS7Chain=X.509 Chứng chỉ có mạch chuỗi (PKCS#7)
-writeFileFailure=Lỗi tập tin
-writeFileFailed=Không thể ghi vào tập tin %S:\n%S.
-writeFileAccessDenied=Truy cập bị từ chối
-writeFileIsLocked=Tập tin bị khóa
-writeFileNoDeviceSpace=Không còn chỗ trống trên thiết bị
-writeFileUnknownError=Lỗi chưa biết
