Pontoon: Update Slovenian (sl) localization of Firefox Co-authored-by: Rok Žerdin <zerdo90@gmail.com> Co-authored-by: Lan Glad <upwinxp@gmail.com>

--- a/sl/devtools/client/debugger.properties
+++ b/sl/devtools/client/debugger.properties
@@ -687,6 +687,7 @@ inlinePreview.show.label=Prikaži predogled v vrstici
 inlinePreview.hide.label=Skrij predogled v vrstici
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Nastavitve razhroščevalnika
 
 # LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
 # label for disabling JavaScript
