--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Wachtwoordvelden aanwezig op een onveilig ifram
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Laden van gemengde (onveilige) actieve inhoud ‘%1$S’ op een beveiligde pagina
 LoadingMixedDisplayContent2=Laden van gemengde (onveilige) vensterinhoud ‘%1$S’ op een beveiligde pagina
+LoadingMixedDisplayObjectSubrequestDeprecation=Het laden van gemengde (onveilige) inhoud ‘%1$S’ in een plug-in op een beveiligde pagina wordt afgeraden en wordt binnenkort geblokkeerd.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Een iframe met zowel allow-scripts als allow-same-origin voor zijn sandbox-attribuut kan zijn sandboxing verwijderen.
 
