--- a/cy/devtools/client/netmonitor.properties
+++ b/cy/devtools/client/netmonitor.properties
@@ -1062,6 +1062,11 @@ netmonitor.toolbar.timings=Amseru
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Penynnau Ymateb
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Rhwystro
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL sy'n Gofyn:
@@ -1111,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Penynnau ymateb:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Maint pennyn:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Bras
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
