--- a/it/dom/chrome/accessibility/mac/accessible.properties
+++ b/it/dom/chrome/accessibility/mac/accessible.properties
@@ -29,6 +29,7 @@ content = contenuto
 main = principale
 alert = avviso
 alertDialog = finestra di avviso
+dialog = finestra di dialogo
 article = articolo
 document = documento
 figure = figura
