[S] toolkit: Bug 1637498 - Don't hardcode Pocket in Reader Mode string

--- a/it/toolkit/chrome/global/aboutReader.properties
+++ b/it/toolkit/chrome/global/aboutReader.properties
@@ -15,7 +15,7 @@ aboutReader.fontType.sans-serif = Senza grazie
 aboutReader.fontTypeSample = Aa
 aboutReader.toolbar.close = Chiudi Modalità lettura
 aboutReader.toolbar.typeControls = Controlli carattere
-readerView.savetopocket.label = Salva in Pocket
+readerView.savetopocket.label = Salva in %S
 readerView.done.label = Fatto
 readerView.enter = Attiva Modalità lettura
 readerView.enter.accesskey = A
