--- a/nb-NO/dom/chrome/security/security.properties
+++ b/nb-NO/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Passordfelt vises på en usikker (http://) ifra
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Innlasting av mikset (usikkert) aktivt innhold «%1$S» på en sikker side
 LoadingMixedDisplayContent2=Innlasting av mikset (usikkert) visningsinnhold «%1$S» på en sikker side
+LoadingMixedDisplayObjectSubrequestDeprecation=Lasting av blandet (usikkert) innhold «%1$S» inni et programtillegg på en sikker side er frarådet og vil snart bli blokkert.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som har både allow-scripts og allow-same-origin i sin sandbox-attributt kan oppheve sandboxingen.
 
