Pontoon: Update Spanish (Argentina) (es-AR) localization of Firefox Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/devtools/client/netmonitor.properties
+++ b/es-AR/devtools/client/netmonitor.properties
@@ -1120,6 +1120,7 @@ netmonitor.summary.size=Tamaño de encabezados:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
+netmonitor.headers.raw=Bruto
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
