--- a/es-AR/dom/chrome/security/security.properties
+++ b/es-AR/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Hay campos de contraseña en un iframe inseguro
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Cargando contenido activo mixto (inseguro) en una página segura "%1$S"
 LoadingMixedDisplayContent2=Loading mixed (insecure) display content "%1$S" on a secure page
+LoadingMixedDisplayObjectSubrequestDeprecation=Se desaconseja cargar contenido mixto (inseguro) "%1$S" dentro de un complemento en una página segura y se bloqueará pronto.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=An iframe which has both allow-scripts and allow-same-origin for its sandbox attribute can remove its sandboxing.
 
