[S] toolkit: Bug 1226236 - Allow user to remove saved login/password when being asked to update it

--- a/it/browser/chrome/browser/browser.properties
+++ b/it/browser/chrome/browser/browser.properties
@@ -547,6 +547,7 @@ confirmationHint.addSearchEngine.label = Aggiunto motore di ricerca
 confirmationHint.pinTab.label = Appuntata
 confirmationHint.pinTab.description = Fai clic on il tasto destro per rilasciare la scheda.
 confirmationHint.passwordSaved.label = Password salvata.
+confirmationHint.loginRemoved.label = Credenziali rimosse.
 confirmationHint.breakageReport.label = Grazie, segnalazione inviata.
 livebookmarkMigration.title = Segnalibri Live di %S
 gnomeSearchProviderSearch = Cerca %S in Internet
