--- a/it/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/it/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -20,6 +20,8 @@ updateLoginButtonText = Aggiorna
 updateLoginButtonAccessKey = A
 updateLoginButtonDeny.label = Non aggiornare
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Elimina credenziali salvate
+updateLoginButtonDelete.accesskey = E
 rememberPasswordMsg = Salvare la password per “%1$S” su %2$S?
 rememberPasswordMsgNoUsername = Salvare la password su %S?
 noUsernamePlaceholder = Nessun nome utente
