Pontoon: Update Swedish (sv-SE) localization of Firefox Co-authored-by: Luna Jernberg <bittin@cafe8bitar.se>

--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Fäst!
 confirmationHint.pinTab.description = Högerklicka på fliken för att ta bort den.
 
 confirmationHint.passwordSaved.label = Lösenord sparat!
+confirmationHint.loginRemoved.label = Inloggning borttagen!
 confirmationHint.breakageReport.label = Rapport skickad. Tack!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
