Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = 已釘選！
 confirmationHint.pinTab.description = 在分頁上按右鍵以解除釘選
 
 confirmationHint.passwordSaved.label = 已儲存密碼！
+confirmationHint.loginRemoved.label = 已刪除登入資訊！
 confirmationHint.breakageReport.label = 已回報，感謝您！
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
