--- a/zh-TW/dom/chrome/accessibility/mac/accessible.properties
+++ b/zh-TW/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       主要
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      警告
 alertDialog =      警告對話框
+dialog      =      對話框
 article     =      文章
 document    =      文件
 # The (spoken) role description for the WAI-ARIA figure role
