--- a/zh-TW/toolkit/chrome/global/aboutReader.properties
+++ b/zh-TW/toolkit/chrome/global/aboutReader.properties
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=襯線字
 aboutReader.fontType.sans-serif=無襯線字
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Aa
 
 aboutReader.toolbar.close=關閉閱讀模式
 aboutReader.toolbar.typeControls=字體控制
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=儲存到 %S
+# This is a label used for done option in the toolbar
+readerView.done.label=完成
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=進入閱讀模式
