--- a/zh-TW/toolkit/chrome/global/narrate.properties
+++ b/zh-TW/toolkit/chrome/global/narrate.properties
@@ -5,6 +5,11 @@
 # Narrate, meaning "read the page out loud". This is the name of the feature
 # and it is the label for the popup button.
 narrate = 朗讀
+
+# "Listen, which allows users to listen to Firefox reading the text, 
+# instead of having to read it themselves." This is the name
+# of the feature and it is the label for the popup button.
+listen = 聆聽
 back = 上一個
 start = 開始
 stop = 停止
