--- a/zh-TW/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/zh-TW/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = 更新
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = 不要更新
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = 刪除儲存的登入資訊
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S（%2$S）
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=無使用者名稱
-
 duplicateLoginTitle=登入資訊已存在
 duplicateLogin=已有重複的登入資訊。
 
