Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Прикріплено!
 confirmationHint.pinTab.description = Натисніть правою кнопкою на вкладці, щоб відкріпити її.
 
 confirmationHint.passwordSaved.label = Пароль збережено!
+confirmationHint.loginRemoved.label = Запис вилучено!
 confirmationHint.breakageReport.label = Звіт надіслано. Дякуємо!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
