--- a/uk/dom/chrome/accessibility/mac/accessible.properties
+++ b/uk/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       основне
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      попередження
 alertDialog =      діалог попередження
+dialog      =      діалог
 article     =      стаття
 document    =      документ
 # The (spoken) role description for the WAI-ARIA figure role
