--- a/uk/toolkit/chrome/global/aboutReader.properties
+++ b/uk/toolkit/chrome/global/aboutReader.properties
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=Serif
 aboutReader.fontType.sans-serif=Sans-serif
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Аа
 
 aboutReader.toolbar.close=Закрити режим читача
 aboutReader.toolbar.typeControls=Налаштування шрифтів
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=Зберегти в %S
+# This is a label used for done option in the toolbar
+readerView.done.label=Готово
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=Перейти в режим читача
