--- a/uk/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/uk/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Оновити
 updateLoginButtonAccessKey = О
 updateLoginButtonDeny.label = Не оновлювати
 updateLoginButtonDeny.accesskey = Н
+updateLoginButtonDelete.label = Вилучити запис
+updateLoginButtonDelete.accesskey = л
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
