--- a/en-CA/browser/chrome/browser/browser.properties
+++ b/en-CA/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Pinned!
 confirmationHint.pinTab.description = Right-click the tab to unpin it.
 
 confirmationHint.passwordSaved.label = Password saved!
+confirmationHint.loginRemoved.label = Login removed!
 confirmationHint.breakageReport.label = Report sent. Thank you!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
