Pontoon: Update French (fr) localization of Firefox Co-authored-by: Théo Chevalier <theo.chevalier11@gmail.com> Co-authored-by: Benoit Leseul <benoit.leseul@gmail.com>

--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Épinglé !
 confirmationHint.pinTab.description = Effectuez un clic droit sur l’onglet pour le désépingler.
 
 confirmationHint.passwordSaved.label = Mot de passe enregistré !
+confirmationHint.loginRemoved.label = Identifiant supprimé !
 confirmationHint.breakageReport.label = Rapport transmis. Merci !
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
