--- a/fr/dom/chrome/accessibility/mac/accessible.properties
+++ b/fr/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       principal
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alerte
 alertDialog =      fenêtre d’alerte
+dialog      =      dialogue
 article     =      article
 document    =      document
 # The (spoken) role description for the WAI-ARIA figure role
