--- a/fr/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/fr/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Mettre à jour
 updateLoginButtonAccessKey = M
 updateLoginButtonDeny.label = Ne pas mettre à jour
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Supprimer l’identifiant enregistré
+updateLoginButtonDelete.accesskey = r
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
