Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -1212,6 +1212,7 @@ confirmationHint.pinTab.label = נעוץ!
 confirmationHint.pinTab.description = יש ללחוץ על הלשונית עם הכפתור הימני כדי לשחרר את הנעיצה.
 
 confirmationHint.passwordSaved.label = הססמה נשמרה!
+confirmationHint.loginRemoved.label = הכניסה הוסרה!
 confirmationHint.breakageReport.label = הדיווח נשלח. תודה!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
