Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/he/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = לעדכן
 updateLoginButtonAccessKey = ע
 updateLoginButtonDeny.label = לא לעדכן
 updateLoginButtonDeny.accesskey = ל
+updateLoginButtonDelete.label = הסרת הכניסה השמורה
+updateLoginButtonDelete.accesskey = ה
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -60,7 +62,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=אין שם משתמש
-
 duplicateLoginTitle=פרטי הכניסה כבר קיימים
 duplicateLogin=כבר קיים כפיל של פרטי הכניסה.
 
