Pontoon: Update Romanian (ro) localization of Firefox Co-authored-by: robbp <robbpaun@gmail.com>

--- a/ro/devtools/client/menus.properties
+++ b/ro/devtools/client/menus.properties
@@ -8,7 +8,7 @@
 devtoolsRemoteDebugging.label = Depanare la distanță
 devtoolsRemoteDebugging.accesskey = R
 
-devtoolsConnect.label = Conectează-te…
+devtoolsConnect.label = Conectare…
 devtoolsConnect.accesskey = C
 
 browserConsoleCmd.label = Consolă browser
