Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -323,10 +323,12 @@ nocachedbodytitle=<TITLE>Iru al konekta reĝimo por vidigi tiun ĉi mesaĝon</TI
 
 # mailWindowOverlay.js
 confirmUnsubscribeTitle=Konfirmi malaboni
-confirmUnsubscribeText=Are you sure you want to unsubscribe from %S?
-confirmUnsubscribeManyText=Are you sure you want to unsubscribe from these newsgroups?
-restoreAllTabs=Restore All Tabs
+confirmUnsubscribeText=Ĉu vi certe volas rezigni abonon al %S?
+confirmUnsubscribeManyText=Ĉu vi certe volas rezigni aboni la elektitajn novaĵgrupojn?
+restoreAllTabs=Restarigi ĉiujn langetojn
 
+confirmMarkAllFoldersReadTitle=Marki ĉiujn mesaĝujojn kiel legitajn
+confirmMarkAllFoldersReadMessage=Ĉu vi certe volas marki ĉiujn mesaĝojn en ĉiuj mesaĝujoj de tiu ĉi konto kiel legitajn?
 
 # LOCALIZATION NOTE(junkBarMessage): %S is brand
 junkBarMessage=%S thinks this message is Junk mail.
