Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -331,17 +331,17 @@ confirmMarkAllFoldersReadTitle=Marki ĉiujn mesaĝujojn kiel legitajn
 confirmMarkAllFoldersReadMessage=Ĉu vi certe volas marki ĉiujn mesaĝojn en ĉiuj mesaĝujoj de tiu ĉi konto kiel legitajn?
 
 # LOCALIZATION NOTE(junkBarMessage): %S is brand
-junkBarMessage=%S thinks this message is Junk mail.
-junkBarButton=Not Junk
-junkBarButtonKey=N
-junkBarInfoButton=Learn More
-junkBarInfoButtonKey=L
+junkBarMessage=%S rekonas tiun ĉi mesaĝon kiel nedeziratan.
+junkBarButton=Dezirata mesaĝo
+junkBarButtonKey=D
+junkBarInfoButton=Pli da informo
+junkBarInfoButtonKey=P
 
 # LOCALIZATION NOTE(remoteContentBarMessage): %S is brand
-remoteContentBarMessage=To protect your privacy, %S has blocked remote content in this message.
-remoteContentPrefLabel=Options
-remoteContentPrefAccesskey=O
-remoteContentPrefLabelUnix=Preferences
+remoteContentBarMessage=Por protekti vian privatecon, %S blokis foran enhavon en tiu ĉi mesaĝo.
+remoteContentPrefLabel=Elektebloj
+remoteContentPrefAccesskey=E
+remoteContentPrefLabelUnix=Preferoj
 remoteContentPrefAccesskeyUnix=P
 
 # LOCALIZATION NOTE(remoteAllowResource): %S is origin
