Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -345,16 +345,16 @@ remoteContentPrefLabelUnix=Preferoj
 remoteContentPrefAccesskeyUnix=P
 
 # LOCALIZATION NOTE(remoteAllowResource): %S is origin
-remoteAllowResource=Allow remote content from %S
+remoteAllowResource=Permesi al fora enhavo el %S
 # LOCALIZATION NOTE(remoteAllowAll): Semi-colon list of plural forms.
 # See: https://developer.mozilla.org/en/Localization_and_Plurals
 # #1 is the number of origins
-remoteAllowAll=Allow remote content from the #1 origin listed above;Allow remote content from all #1 origins listed above
+remoteAllowAll=Permesi al fora enhavo el #1 fonto listigita supre;Permesi al fora enhavo el #1 fontoj listigitaj supre
 
-phishingBarMessage=This message may be a scam.
-phishingBarPrefLabel=Options
-phishingBarPrefAccesskey=O
-phishingBarPrefLabelUnix=Preferences
+phishingBarMessage=Tiu ĉi mesaĝo povas esti trompo.
+phishingBarPrefLabel=Elektebloj
+phishingBarPrefAccesskey=E
+phishingBarPrefLabelUnix=Preferoj
 phishingBarPrefAccesskeyUnix=P
 
 mdnBarIgnoreButton=Ignore Request
