Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -357,18 +357,18 @@ phishingBarPrefAccesskey=E
 phishingBarPrefLabelUnix=Preferoj
 phishingBarPrefAccesskeyUnix=P
 
-mdnBarIgnoreButton=Ignore Request
-mdnBarIgnoreButtonKey=n
-mdnBarSendReqButton=Send Receipt
+mdnBarIgnoreButton=Ignori
+mdnBarIgnoreButtonKey=I
+mdnBarSendReqButton=Sendi konfirmon
 mdnBarSendReqButtonKey=S
 
-draftMessageMsg=This is a draft message.
-draftMessageButton=Edit
-draftMessageButtonKey=E
+draftMessageMsg=Tio ĉi estas malneto de mesaĝo.
+draftMessageButton=Redakti
+draftMessageButtonKey=R
 
 # msgHdrViewOverlay.js
-openLabel=Open
-openLabelAccesskey=O
+openLabel=Malfermi
+openLabelAccesskey=M
 saveLabel=Save As…
 saveLabelAccesskey=A
 detachLabel=Detach…
