--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -369,12 +369,12 @@ draftMessageButtonKey=R
 # msgHdrViewOverlay.js
 openLabel=Malfermi
 openLabelAccesskey=M
-saveLabel=Save As…
-saveLabelAccesskey=A
-detachLabel=Detach…
+saveLabel=Konservi kiel…
+saveLabelAccesskey=K
+detachLabel=Disigi…
 detachLabelAccesskey=D
-deleteLabel=Delete
-deleteLabelAccesskey=E
+deleteLabel=Forigi
+deleteLabelAccesskey=F
 deleteAttachments=The following attachments will be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
 detachAttachments=The following attachments have been successfully saved and will now be permanently deleted from this message:\n%S\nThis action cannot be undone. Do you wish to continue?
 deleteAttachmentFailure=Failed to delete the selected attachments.
