Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/browser.properties
+++ b/ko/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = 고정됨!
 confirmationHint.pinTab.description = 탭을 마우스 오른쪽 버튼으로 눌러 고정 해제합니다.
 
 confirmationHint.passwordSaved.label = 비밀번호가 저장되었습니다!
+confirmationHint.loginRemoved.label = 로그인 삭제됨!
 confirmationHint.breakageReport.label = 보고되었습니다. 감사합니다!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
