--- a/ko/dom/chrome/accessibility/mac/accessible.properties
+++ b/ko/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       메인
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      경고
 alertDialog =      경고창
+dialog      =      대화 상자
 article     =      글
 document    =      문서
 # The (spoken) role description for the WAI-ARIA figure role
