--- a/ko/toolkit/chrome/global/aboutReader.properties
+++ b/ko/toolkit/chrome/global/aboutReader.properties
@@ -35,11 +35,18 @@ aboutReader.fontType.serif=세리프
 aboutReader.fontType.sans-serif=산세리프
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=가
 
 aboutReader.toolbar.close=리더뷰 닫기
 aboutReader.toolbar.typeControls=글꼴 제어
 
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=%S에 저장
+# This is a label used for done option in the toolbar
+readerView.done.label=완료
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=리더뷰 보기
