--- a/ko/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/ko/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = 업데이트
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = 업데이트 안 함
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = 저장된 로그인 삭제
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
