--- a/ko/toolkit/chrome/global/narrate.properties
+++ b/ko/toolkit/chrome/global/narrate.properties
@@ -5,6 +5,11 @@
 # Narrate, meaning "read the page out loud". This is the name of the feature
 # and it is the label for the popup button.
 narrate = 읽어주기
+
+# "Listen, which allows users to listen to Firefox reading the text, 
+# instead of having to read it themselves." This is the name
+# of the feature and it is the label for the popup button.
+listen = 듣기
 back = 뒤로
 start = 시작
 stop = 정지
