Pontoon: Update Spanish (Chile) (es-CL) localization of Firefox Co-authored-by: ravmn <ravmn@ravmn.cl>

--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = ¡Fijada!
 confirmationHint.pinTab.description = Haz clic con el botón derecho sobre la pestaña para soltarla.
 
 confirmationHint.passwordSaved.label = ¡Contraseña guardada!
+confirmationHint.loginRemoved.label = ¡Conexión removida!
 confirmationHint.breakageReport.label = Reporte enviado. ¡Gracias!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
