[S] netwerk: Bug 1628942 - replace `tracker` wording by `site`

--- a/it/netwerk/necko.properties
+++ b/it/netwerk/necko.properties
@@ -37,6 +37,8 @@ CookieAllowedForOriginOnTrackerByStorageAccessAPI = Consentito accesso alle riso
 CookieAllowedForTrackerByStorageAccessAPI = Consentito accesso alle risorse di archiviazione per elemento tracciante “%2$S” su “%1$S”.
 CookieAllowedForOriginOnTrackerByHeuristic = Consentito automaticamente accesso alle risorse di archiviazione per “%3$S” aperto da elemento tracciante “%2$S” su “%1$S”.
 CookieAllowedForTrackerByHeuristic = Consentito automaticamente accesso alle risorse di archiviazione per elemento tracciante “%2$S” su “%1$S”.
+CookieAllowedForOriginByStorageAccessAPI = Consentito accesso alle risorse di archiviazione per origine “%2$S” su “%1$S”.
+CookieAllowedForOriginByHeuristic = Consentito automaticamente accesso alle risorse di archiviazione per origine “%2$S” su “%1$S”.
 CookieAllowedForFpiByHeuristic = Accesso alle risorse di archiviazione garantito automaticamente per isolamento First-Party “%2$S” su “%1$S”.
 CookieRejectedNonRequiresSecure = Cookie “%1$S” rifiutato in quanto include l’attributo “sameSite=none” ma manca l’attributo “secure”.
 CookieRejectedNonRequiresSecureForBeta = Il cookie “%1$S” verrà presto rifiutato in quanto l’attributo “sameSite” è impostato a “none” o un valore non valido, senza l’attributo “secure”. Per ulteriori informazioni sull’attributo “sameSite”, consultare %2$S
