[S] devtools: Bug 1555057  - Show the related Add-on for blocked resources

--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -95,6 +95,7 @@ networkMenu.sizeCached = In cache
 networkMenu.sizeServiceWorker = Service worker
 networkMenu.blockedBy = bloccato da %S
 networkMenu.blocked2 = Bloccato
+networkMenu.blockedby = Bloccato da %S
 networkMenu.blockedTooltip = Bloccato
 charts.totalSeconds = Tempo: #1 secondo;Tempo: #1 secondi
 charts.totalSecondsNonBlocking = Tempo non bloccante: #1 secondo;Tempo non bloccante: #1 secondi
